Tools/testing/alertmanager/deploy_alertmanager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alertmanager
  name: alertmanager
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: alertmanager
      deployment: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
        deployment: alertmanager
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        searches:
          - es.wcorp.carrefour.com
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      terminationGracePeriodSeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: alertmanager-config
      containers:
        - name: prometheus-alertmanager
          image: alertmanager
          imagePullPolicy: "IfNotPresent"
          args:
            - --config.file=/etc/config/alertmanager.yml
            - --storage.path=/tmp/data
            - --cluster.advertise-address=[$(POD_IP)]:6783
            - --web.external-url=https://alertmanager-monitoring.apps.gke.es.wcorp.carrefour.com

          ports:
            - containerPort: 9093
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9093
            initialDelaySeconds: 30
            timeoutSeconds: 30
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
