Tools/testing/alertmanager/svc_alertmanager.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
spec:
  ports:
    - port: 9093
      protocol: TCP
  selector:
    app: alertmanager
