Tools/testing/alertmanager/route_alertmanager.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-int-https
spec:
  entryPoints:
    - int-https
  routes:
    - kind: Rule
      match: Host(`alertmanager-monitoring.apps.gke.es.wcorp.carrefour.com`) && Method(`GET`)
      services:
        - name: alertmanager
          port: 9093
  tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-int-http
spec:
  entryPoints:
    - int-http
  routes:
    - kind: Rule
      middlewares:
        - name: redirect
          namespace: traefik
      match: Host(`alertmanager-monitoring.apps.gke.es.wcorp.carrefour.com`) && Method(`GET`)
      services:
        - name: alertmanager
          port: 9093
